# convmixer

./: .gitignore  README.md  pyproject.toml
convmixer/: cli.py  convmixer.py  simple_model.py
notebooks/: run_on_cifar10.ipynb
